# tidal-dl

./: .gitattributes  .gitignore  README.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-report.yml  question-report.yml
TIDALDL-PY/: pyproject.toml  updatelog.md
TIDALDL-PY/tests/: conftest.py  test_no_api_key.py  test_phase2_resilience.py  test_phase3_duplicate_resolution.py
TIDALDL-PY/tidal_dl/: __init__.py  api.py  cli.py  config.py  constants.py  dash.py  download.py  hifi_api.py  metadata.py
TIDALDL-PY/tidal_dl/helper/: cache.py  camelot.py  checkpoint.py  cli.py  decorator.py  decryption.py  isrc_index.py  library_scanner.py  path.py  playlist_import.py  tidal.py  wrapper.py
TIDALDL-PY/tidal_dl/model/: cfg.py  downloader.py
docs/: EXTERNAL_APIS.md
